clusters/production/media/sabnzbd/sabnzbd-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: sabnzbd
        securityContext:
          allowPrivilegeEscalation: false
        image: linuxserver/sabnzbd:5.1.3 # {"$imagepolicy": "flux-system:sabnzbd"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        startupProbe:
          tcpSocket:
            port: 8080
          failureThreshold: 60
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8080
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "3Gi"
        volumeMounts:
        - name: sabnzbd-config
          mountPath: /config
        - name: sabnzbd-downloads
          mountPath: /downloads
      volumes:
      - name: sabnzbd-config
        persistentVolumeClaim:
          claimName: pvc-sabnzbd-config
      - name: sabnzbd-downloads
        persistentVolumeClaim:
          claimName: pvc-media-downloads
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
  - name: sabnzbd
    port: 8080
    targetPort: 8080
  type: ClusterIP
