clusters/production/media/sabnzbd/sabnzbd-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: media
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - sabnzbd.rees.ca
  rules:
  - backendRefs:
    - name: sabnzbd
      port: 8080
