clusters/production/media/sabnzbd/sabnzbd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  namespace: default
spec:
  ingressClassName: internal-nginx  
  rules:
  - host: "sabnzbd.rees.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sabnzbd
            port:
              number: 8080
